crates/tui/tests/snapshots/tui_test__forecast_view_100x26.snap
---
source: crates/tui/tests/tui_test.rs
expression: buffer_to_string(&terminal)
---
┌────────────────────────────────────────────────────────────────────────────┐┌────────────────────┐
│ finctl   Sistema de Controle Financeiro Pessoal  [Online]                  ││08/10/2026 09:00:00 │
└────────────────────────────────────────────────────────────────────────────┘└────────────────────┘
┌ Navegação ───────────────────────────────────────────────────────────────────────────────────────┐
│ 1: Dashboard │ 2: Lançamentos │ 3: Relatórios │ 4: Orçamentos │ 5: Metas                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Aba 5: Metas e Projeção [Alterne com 1 / 2 ou 'v'] ──────────────────────────────────────────────┐
│   1: Metas de Economia   │  [2: Projeção de Fluxo de Caixa]                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Indicadores da Projeção (3 Meses — Mensal) ────────────────┐┌ Trajetória do Saldo Futuro ────────┐
│Saldo Inicial Atual: R$ 2.000,00   |  Metas Planejadas: [g] ││█                                   │
│⚠️   PRIMEIRO PERÍODO NEGATIVO: 2026-12 (Saldo Projetado: -R$││█                                   │
│                                                            ││█ ▅                                 │
│Atalhos: [g] Alternar Metas  |  [w/m] Granularidade  |  [+/-││█ █                                 │
└────────────────────────────────────────────────────────────┘└────────────────────────────────────┘
┌ Períodos Projetados (Entradas, Saídas e Saldos Futuros) ─────────────────────────────────────────┐
│   Período              Saldo Inicial     Entradas (+)       Saídas (-)  Resultado Líquido    Sald│
│► 2026-11                R$ 2.000,00    + R$ 3.500,00    - R$ 2.500,00      + R$ 1.000,00      R$ │
│  2026-12                R$ 3.000,00    + R$ 1.000,00    - R$ 4.500,00      - R$ 3.500,00 ⚠️      -│
│  2027-01                 -R$ 500,00    + R$ 3.500,00    - R$ 2.000,00      + R$ 1.500,00      R$ │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────┐┌──────────────────────────────┐
│ [1/2] Visão  [g] Metas  [w/m] Sem/Mês  [+/-] Horizonte  [j/k] Nav││               Status: Pronto │
└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘
