crates/tui/tests/snapshots/tui_test__goals_view_100x26.snap
---
source: crates/tui/tests/tui_test.rs
expression: buffer_to_string(&terminal)
---
┌────────────────────────────────────────────────────────────────────────────┐┌────────────────────┐
│ finctl   Sistema de Controle Financeiro Pessoal  [Online]                  ││08/10/2026 09:00:00 │
└────────────────────────────────────────────────────────────────────────────┘└────────────────────┘
┌ Navegação ───────────────────────────────────────────────────────────────────────────────────────┐
│ 1: Dashboard │ 2: Lançamentos │ 3: Relatórios │ 4: Orçamentos │ 5: Metas                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Aba 5: Metas e Projeção [Alterne com 1 / 2 ou 'v'] ──────────────────────────────────────────────┐
│  [1: Metas de Economia]  │   2: Projeção de Fluxo de Caixa                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Metas Cadastradas (2) [Use j/k para selecionar, c/a para aporte] ────────────────────────────────┐
│   Nome               Tipo             Alvo         Atual      Restante Progresso            %  Da│
│► Reserva de Emergê… Manual  R$ 10.000,00   R$ 6.000,00   R$ 4.000,00 [██████░░░░]   60.0%  2027-1│
│  Viagem de Férias   Conta    R$ 5.000,00   R$ 2.500,00   R$ 2.500,00 [█████░░░░░]   50.0%  2027-0│
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Detalhes da Meta Selecionada ────────────────────────────────────────────────────────────────────┐
│Meta: Reserva de Emergência  |  ID: 11111111  |  Controle: Aportes manuais (registre com tecla [c]│
│Alvo: R$ 10.000,00   Atual: R$ 6.000,00   Restante: R$ 4.000,00   Concluído: 60.0%                │
│Data Alvo: 2027-10-01   Aporte Mensal Necessário: R$ 333,33/mês   Média Recente (90d): R$ 500,00/m│
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────┐┌──────────────────────────────┐
│ [1/2] Visão  [c/a] Aporte  [j/k] Navegar  [r] Atualizar  [Tab/1-5││               Status: Pronto │
└──────────────────────────────────────────────────────────────────┘└──────────────────────────────┘
