crates/tui/tests/snapshots/tui_test__light_theme_80x24.snap
---
source: crates/tui/tests/tui_test.rs
expression: buffer_to_string(&terminal)
---
┌────────────────────────────────────────────────────────┐┌────────────────────┐
│ finctl  Controle Financeiro  [Online]                  ││08/10/2026 09:00:00 │
└────────────────────────────────────────────────────────┘└────────────────────┘
┌ Navegação ───────────────────────────────────────────────────────────────────┐
│ 1: Dashboard │ 2: Lançamentos │ 3: Relatórios │ 4: Orçamentos │ 5: Metas     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Saldos por Conta (2) ────────────────┐┌ Resumo do Mês (2026-10) ─────────────┐
│• Nubank             R$ 2.500,00      ││Receitas:     R$ 4.000,00             │
│• Carteira           R$ 150,00        ││Despesas:     R$ 1.800,00             │
│                                      ││─────────────────────────────         │
│Total Geral: R$ 2.650,00              ││Saldo Líquido: R$ 2.200,00            │
│                                      ││Poupança:     55.0%                   │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
┌ Status dos Orçamentos ───────────────┐┌ Próximos Vencimentos ────────────────┐
│Alimentação  [██████░░]  75%          ││20/10 Internet… R$ 120,00 [PENDENTE]  │
│                                      ││05/10 Energia … R$ 230,00 [ATRASADO]  │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────┐┌──────────────────────────────┐
│ [q] Sair  [Tab/1-5] Abas  [r] Atualizar  [t] ││               Status: Pronto │
└──────────────────────────────────────────────┘└──────────────────────────────┘
