crates/tui/tests/snapshots/tui_test__reports_categories_80x24.snap
---
source: crates/tui/tests/tui_test.rs
expression: buffer_to_string(&terminal)
---
┌────────────────────────────────────────────────────────┐┌────────────────────┐
│ finctl  Controle Financeiro  [Online]                  ││08/10/2026 09:00:00 │
└────────────────────────────────────────────────────────┘└────────────────────┘
┌ Navegação ───────────────────────────────────────────────────────────────────┐
│ 1: Dashboard │ 2: Lançamentos │ 3: Relatórios │ 4: Orçamentos │ 5: Metas     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Relatórios Financeiros ──────────────────────────────────────────────────────┐
│Sub-visões: [1] Categorias  [2] Evolução Mensal  [3] Comparativo | ◄ 2026-10 ►│
└──────────────────────────────────────────────────────────────────────────────┘
┌ Gastos por Categoria — 2026-10 (Total: R$ 2.500,00) ─────────────────────────┐
│  Categoria             %         Valor Distribuição                          │
│────────────────────────────────────────────────────────────────────────────  │
│▶ Alimentação e …   60,0%  R$ 1.500,00 [████████████████████░░░░░░░░░░░░░]    │
│  Transporte        40,0%  R$ 1.000,00 [█████████████░░░░░░░░░░░░░░░░░░░░]    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────┐┌──────────────────────────────┐
│ [1-3] Visão  [[ / ]] Mês  [i] Previstos  [p] ││               Status: Pronto │
└──────────────────────────────────────────────┘└──────────────────────────────┘
