crates/tui/tests/snapshots/tui_test__reports_comparison_80x24.snap
---
source: crates/tui/tests/tui_test.rs
expression: buffer_to_string(&terminal)
---
┌────────────────────────────────────────────────────────┐┌────────────────────┐
│ finctl  Controle Financeiro  [Online]                  ││08/10/2026 09:00:00 │
└────────────────────────────────────────────────────────┘└────────────────────┘
┌ Navegação ───────────────────────────────────────────────────────────────────┐
│ 1: Dashboard │ 2: Lançamentos │ 3: Relatórios │ 4: Orçamentos │ 5: Metas     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Relatórios Financeiros ──────────────────────────────────────────────────────┐
│Sub-visões: [1] Categorias  [2] Evolução Mensal  [3] Comparativo | ◄ 2026-10 ►│
└──────────────────────────────────────────────────────────────────────────────┘
┌ Comparativo dos Totais Gerais ───────────────────────────────────────────────┐
│Receitas: R$ 5.000,00 (Ant.) vs R$ 6.000,00 (Atual)  Delta: +R$ 1.000,00      │
│Despesas: R$ 2.800,00 (Ant.) vs R$ 2.500,00 (Atual)  Delta: -R$ 300,00        │
│Saldo:    R$ 2.200,00 (Ant.) vs R$ 3.500,00 (Atual)  Delta: +R$ 1.300,00      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Variação de Despesas por Categoria ──────────────────────────────────────────┐
│  Categoria             Mês Ant.      Mês Atual       Variação R$     Var. %  │
│────────────────────────────────────────────────────────────────────────────  │
│▶ Alimentação        R$ 1.200,00    R$ 1.500,00       +R$ 300,00    +25,0%    │
│  Transporte         R$ 1.200,00    R$ 1.000,00       -R$ 200,00    -16,7%    │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────┐┌──────────────────────────────┐
│ [1-3] Visão  [[ / ]] Mês  [i] Previstos  [p] ││               Status: Pronto │
└──────────────────────────────────────────────┘└──────────────────────────────┘
