crates/tui/tests/snapshots/tui_test__reports_evolution_80x24.snap
---
source: crates/tui/tests/tui_test.rs
expression: buffer_to_string(&terminal)
---
┌────────────────────────────────────────────────────────┐┌────────────────────┐
│ finctl  Controle Financeiro  [Online]                  ││08/10/2026 09:00:00 │
└────────────────────────────────────────────────────────┘└────────────────────┘
┌ Navegação ───────────────────────────────────────────────────────────────────┐
│ 1: Dashboard │ 2: Lançamentos │ 3: Relatórios │ 4: Orçamentos │ 5: Metas     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Relatórios Financeiros ──────────────────────────────────────────────────────┐
│Sub-visões: [1] Categorias  [2] Evolução Mensal  [3] Comparativo | ◄ 2026-10 ►│
└──────────────────────────────────────────────────────────────────────────────┘
┌ Receitas (Últimos 6 Meses) ──────────┐┌ Despesas (Últimos 6 Meses) ──────────┐
│▆▆▆▇▆█                                ││▆▇█▇▆▅                                │
└──────────────────────────────────────┘└──────────────────────────────────────┘
┌ Histórico Mês a Mês ─────────────────────────────────────────────────────────┐
│ Mês              Receitas        Despesas     Saldo Líquido     Poupança     │
│  2026-05    R$ 5.000,00    R$ 3.000,00    +R$ 2.000,00        40,0%          │
│  2026-06    R$ 5.200,00    R$ 3.100,00    +R$ 2.100,00        40,4%          │
│  2026-07    R$ 5.000,00    R$ 3.500,00    +R$ 1.500,00        30,0%          │
│  2026-08    R$ 5.500,00    R$ 3.200,00    +R$ 2.300,00        41,8%          │
│  2026-09    R$ 5.000,00    R$ 2.800,00    +R$ 2.200,00        44,0%          │
│► 2026-10    R$ 6.000,00    R$ 2.500,00    +R$ 3.500,00        58,3%          │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────┐┌──────────────────────────────┐
│ [1-3] Visão  [[ / ]] Mês  [i] Previstos  [p] ││               Status: Pronto │
└──────────────────────────────────────────────┘└──────────────────────────────┘
