crates/tui/tests/snapshots/tui_test__transactions_modal_80x24.snap
---
source: crates/tui/tests/tui_test.rs
expression: buffer_to_string(&terminal)
---
┌────────────────────────────────────────────────────────┐┌────────────────────┐
│ finctl  Controle Financeiro  [Online]                  ││08/10/2026 09:00:00 │
└────────────────────────────────────────────────────────┘└────────────────────┘
┌ Navegação ───────────────────────────────────────────────────────────────────┐
│ 1: Dashboard │ 2: Lançamentos │ 3: Relatórios │ 4: Orçamentos │ 5: Metas     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Filtros e Busca ─────────────────────────────────────────────────────────────┐
│Filtros ┌ Adicionar Lançamento ──────────────────────────────────────┐        │
└────────│Tipo:         [ Despesa (use Espaço/Setas para alternar)_ ] │────────┘
┌ Lançame│Conta:        [                                        ]    │────────┐
│Sel Data│Categoria:    [                                        ]    │tatus   │
│────────│Valor (R$):   [                                        ]    │──────  │
│▶[ ] 15/│Data (AAAA-MM-DD):[ 2026-10-08                             ]│[Pago]  │
│ [ ] 15/│Descrição:    [                                        ]    │[Pago]  │
│ [ ] 15/│Status:       [ Pago (use Espaço/Setas para alternar)  ]    │[Pend]  │
│        │                                                            │        │
│        │ [Tab] Navegar campos  [Enter] Salvar  [Esc] Cancelar       │        │
└────────│                                                            │────────┘
┌────────│                                                            │────────┐
│ Página └────────────────────────────────────────────────────────────┘] Del [ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────┐┌──────────────────────────────┐
│ [Tab/Enter] Próx  [Space] Alternar  [Esc] Can││               Status: Pronto │
└──────────────────────────────────────────────┘└──────────────────────────────┘
