crates/tui/tests/snapshots/tui_test__transactions_table_80x24.snap
---
source: crates/tui/tests/tui_test.rs
expression: buffer_to_string(&terminal)
---
┌────────────────────────────────────────────────────────┐┌────────────────────┐
│ finctl  Controle Financeiro  [Online]                  ││08/10/2026 09:00:00 │
└────────────────────────────────────────────────────────┘└────────────────────┘
┌ Navegação ───────────────────────────────────────────────────────────────────┐
│ 1: Dashboard │ 2: Lançamentos │ 3: Relatórios │ 4: Orçamentos │ 5: Metas     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Filtros e Busca ─────────────────────────────────────────────────────────────┐
│Filtros Ativos: Nenhum (Todos os lançamentos)  [/] Buscar  [f] Filtrar        │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Lançamentos (Use Setas/j/k para navegar, Space para selecionar) ─────────────┐
│Sel Data       Tipo Conta     Categoria Descrição              Valor Status   │
│────────────────────────────────────────────────────────────────────────────  │
│▶[ ] 15/10/2026 DESP Nubank    Alimenta… Supermercado       R$ 150,00 [Pago]  │
│ [ ] 15/10/2026 REC  Nubank    Alimenta… Salário Mensal   R$ 3.500,00 [Pago]  │
│ [ ] 15/10/2026 DESP Nubank    Alimenta… Conta de Luz       R$ 120,00 [Pend]  │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Página 1 de 1 (Total: 3 lançamentos) | [p] Pagar [a] Novo [e] Edit [d] Del [ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────┐┌──────────────────────────────┐
│ [a] Novo  [e] Edit  [d] Excl  [p] Pagar  [Spa││               Status: Pronto │
└──────────────────────────────────────────────┘└──────────────────────────────┘
